FEAT: Ocultar produtos e serviços
Foi criado um método PUT em ambos Services. Também foi criado a logica para chamar um modal de confirmação e caso confirme, chama o método de alterar. onde faz uma requisição PUT e muda a visibilidade dos produtos e serviços de acordo com o que usuário escolher.

--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -90,8 +90,16 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                    <button mat-icon-button aria-label="ícone Button" class="iconmenu">
+
+                    <button *ngIf="servico.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+                        (click)="abrirModalOcultar(servico)">
                         <mat-icon class="icon-color">visibility_off</mat-icon>
+                        <span class="descricaoicon">Ocultar Serviço</span>
+                    </button>
+
+                    <button *ngIf="!servico.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+                        (click)="abrirModalOcultar(servico)">
+                        <mat-icon class="icon-color">visibility</mat-icon>
                         <span class="descricaoicon">Exibir Serviço</span>
                     </button>
 
