--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -94,8 +94,16 @@
                     <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                    <button mat-icon-button aria-label="ícone Button" class="iconmenu" >
+
+                    <button *ngIf="produto.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+                    (click)="abrirModalOcultar(produto)">
                         <mat-icon class="icon-color">visibility_off</mat-icon>
+                        <span class="descricaoicon">Ocultar Produto</span>
+                    </button>
+                
+
+                    <button *ngIf="!produto.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu" (click)="abrirModalOcultar(produto)">
+                        <mat-icon class="icon-color" >visibility</mat-icon>
                         <span class="descricaoicon">Exibir Produto</span>
                     </button>
 
