--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -36,12 +36,12 @@
     <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
 
         <!-- Name Produto -->
-        <ng-container matColumnDef="nomeProduto">
+        <ng-container matColumnDef="nome">
             <th class="color-title" mat-header-cell *matHeaderCellDef>
                 Nome do Produto
             </th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.nome }}
+            <td mat-cell *matCellDef="let produto">
+                {{ produto.nome }}
             </td>
         </ng-container>
 
@@ -50,7 +50,7 @@
             <th class="color-title" mat-header-cell *matHeaderCellDef>
                 Descrição do Produto
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
+            <td mat-cell *matCellDef="let produto">{{ produto.descricao }}</td>
         </ng-container>
 
         <!-- Quantidade do produto -->
@@ -58,13 +58,13 @@
             <th class="color-title" mat-header-cell *matHeaderCellDef>
                 Quantidade
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.qtdEstoque }}</td>
+            <td mat-cell *matCellDef="let produto">{{ produto.qtdEstoque }}</td>
         </ng-container>
 
         <!-- Preço do produto -->
         <ng-container matColumnDef="preco">
             <th class="color-title" mat-header-cell *matHeaderCellDef>Preço</th>
-            <td mat-cell *matCellDef="let element">{{ element.valor }}</td>
+            <td mat-cell *matCellDef="let produto">{{ produto.valor }}</td>
         </ng-container>
 
         <!-- Ícone da tabela -->
