mudando nome do objeto para listar novamente corretamente

--- a/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.html
@@ -17,7 +17,7 @@
                 <div class="nome">
                     <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                         <mat-label class="nome">Nome do produto</mat-label>
-                        <input formControlName="nomeProduto" matInput required />
+                        <input formControlName="nome" matInput required />
                         <!-- <mat-error
                             *ngIf="form.get('nomeProduto').hasError('required')"
                         >
@@ -69,7 +69,7 @@
                         <input
                             matInput
                             placeholder="Ex. Tipo de corte, tipo de barba..."
-                            formControlName="dsProduto"
+                            formControlName="descricao"
                             type="text"
                         />
                     </mat-form-field>
