--- a/src/app/modais/completarCadastro/completarCadastro.component.html
+++ b/src/app/modais/completarCadastro/completarCadastro.component.html
@@ -6,7 +6,7 @@
         <div class="container py-gutter">
             <div class="card overflow-hidden">
                 <div class="h-32 relative overflow-hidden">
-                    <img class="w-full h-full object-cover" src="assets/img/demo/landscape.jpg">
+                    <img class="w-full h-full object-cover" src="assets/img/demo/landscape.jpg" alt="Imagem capa">
                     <div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full z-0">
                         <div (click)="imagemFundo.click()" class="alteraFundo bg-contrast-black center">
                             <mat-icon>add_a_photo</mat-icon>
