--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -4,100 +4,100 @@
         <h2 class="title m-0">Novo Agendamento</h2>
     </div>
 
-    <div class="modal">
-        <!-- modal -->
-        <mat-dialog-content>
-            <div [formGroup]="form" class="example-form">
-                <!-- cliente -->
-                <div class="cliente">
-                    <mat-form-field class="example-full-width" id="inpN" appearance="standard">
-                        <mat-label class="cliente">Cliente</mat-label>
-                        <input formControlName="nomeCliente" matInput required />
-                        <mat-error *ngIf="form.get('nomeCliente').hasError('required')">
-                            Preencha este campo!
-                        </mat-error>
-                    </mat-form-field>
-                </div>
-                <!-- serviço -->
-                <div class="servico">
-                    <mat-form-field class="example-full-width" id="inpN" appearance="standard">
-                        <mat-label class="servico">Serviço</mat-label>
-                        <input formControlName="nomeServico" matInput required />
-                        <mat-error *ngIf="form.get('nomeServico').hasError('required')">
-                            Preencha este campo!
-                        </mat-error>
-                    </mat-form-field>
-                </div>
-
-                <!-- Tempo estimado -->
-                <div class="tempoEs">
-                    <mat-form-field id="tempoEst" appearance="standard">
-                        <mat-label>Tempo Estimado</mat-label>
-                        <input formControlName="tempoEstimado" type="text" matInput placeholder="Digite o Tempo" maxlength="3"
-                            required />
-                        <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                        <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
-                            Preencha este campo!
-                        </mat-error>
-                    </mat-form-field>
-
-                    <!-- valor -->
-                    <mat-form-field id="categoria" appearance="standard">
-                        <mat-label>Valor do Serviço</mat-label>
-                        <input matInput formControlName="valor" required placeholder="Ex. R$ 50,66" />
-                        <mat-error *ngIf="form.get('valor').hasError('required')">
-                            Selecione uma opção!
-                        </mat-error>
-                    </mat-form-field>
-                </div>
-
-                <!-- responsavel -->
-                <div class="responsavel">
-                    <mat-form-field class="example-full-width" id="descricao" appearance="standard">
-                        <mat-label>Responsável</mat-label>
-                        <input matInput formControlName="responsavel" />
-                    </mat-form-field>
-                </div>
-                <div class="descrição">Data e horário do atendimento:</div>
-                <!-- data, hora e status -->
-                <div class="valor">
-                    <mat-form-field class="intval" appearance="standard">
-                        <mat-label>Data</mat-label>
-                        <input matInput [matDatepicker]="picker" formControlName="dtAtendimento" />
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                        <mat-error *ngIf="form.get('dtAtendimento').hasError('required')">
-                            Preencha a data!
-                        </mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field class="intval2" appearance="standard">
-                        <mat-label>Hora</mat-label>
-                        <input matInput formControlName="hrAtendimento" placeholder="Ex. 12:30" />
-                        <mat-error *ngIf="form.get('hrAtendimento').hasError('required')">
-                            Preencha a hora!
-                        </mat-error>
-                    </mat-form-field>
-
-                    <mat-form-field class="status" appearance="standard">
-                        <mat-label>Status</mat-label>
-                        <mat-select formControlName="status" required>
-                            <mat-option value="pendente">Pendente</mat-option>
-                            <mat-option value="aceito">Aceito</mat-option>
-                            <mat-option value="recusado">Recusado</mat-option>
-                        </mat-select>
-                        <mat-error *ngIf="form.get('status').hasError('required')">
-                            Selecione uma opção!
-                        </mat-error>
-                    </mat-form-field>
-                </div>
+    <!-- modal -->
+    <mat-dialog-content>
+        <div [formGroup]="form" class="example-form">
+            <!-- cliente -->
+            <div class="cliente">
+                <mat-form-field class="example-full-width" id="inpN" appearance="standard">
+                    <mat-label class="cliente">Cliente</mat-label>
+                    <input formControlName="nomeCliente" matInput required />
+                    <mat-error *ngIf="form.get('nomeCliente').hasError('required')">
+                        Preencha este campo!
+                    </mat-error>
+                </mat-form-field>
             </div>
-        <!-- botoes adicionar e cancelar -->
-        <mat-dialog-actions align="end">
-            <button mat-button mat-dialog-close>Cancelar</button>
-            <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
-                Adicionar
-            </button>
-        </mat-dialog-actions>
-    </div>
+            <!-- serviço -->
+            <div class="servico">
+                <mat-form-field class="example-full-width" id="inpN" appearance="standard">
+                    <mat-label class="servico">Serviço</mat-label>
+                    <input formControlName="nomeServico" matInput required />
+                    <mat-error *ngIf="form.get('nomeServico').hasError('required')">
+                        Preencha este campo!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+
+            <!-- Tempo estimado -->
+            <div class="tempoEs">
+                <mat-form-field id="tempoEst" appearance="standard">
+                    <mat-label>Tempo Estimado</mat-label>
+                    <input formControlName="tempoEstimado" type="text" matInput placeholder="Digite o Tempo"
+                        maxlength="3" required />
+                    <span matTextPrefix class="minutos">Minutos&nbsp;</span>
+                    <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
+                        Preencha este campo!
+                    </mat-error>
+                </mat-form-field>
+
+                <!-- valor -->
+                <mat-form-field id="categoria" appearance="standard">
+                    <mat-label>Valor do Serviço</mat-label>
+                    <input matInput formControlName="valor" required placeholder="Ex. R$ 50,66" />
+                    <mat-error *ngIf="form.get('valor').hasError('required')">
+                        Selecione uma opção!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+
+            <!-- responsavel -->
+            <div class="responsavel">
+                <mat-form-field class="example-full-width" id="descricao" appearance="standard">
+                    <mat-label>Responsável</mat-label>
+                    <input matInput formControlName="responsavel" />
+                </mat-form-field>
+            </div>
+            <div class="descrição">Data e horário do atendimento:</div>
+            <!-- data, hora e status -->
+            <div class="valor">
+                <mat-form-field class="intval" appearance="standard">
+                    <mat-label>Data</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="dtAtendimento" />
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="form.get('dtAtendimento').hasError('required')">
+                        Preencha a data!
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field class="intval2" appearance="standard">
+                    <mat-label>Hora</mat-label>
+                    <input matInput formControlName="hrAtendimento" placeholder="Ex. 12:30" />
+                    <mat-error *ngIf="form.get('hrAtendimento').hasError('required')">
+                        Preencha a hora!
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field class="status" appearance="standard">
+                    <mat-label>Status</mat-label>
+                    <mat-select formControlName="status" required>
+                        <mat-option value="pendente">Pendente</mat-option>
+                        <mat-option value="aceito">Aceito</mat-option>
+                        <mat-option value="recusado">Recusado</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="form.get('status').hasError('required')">
+                        Selecione uma opção!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+    </mat-dialog-content>
+    <!-- botoes adicionar e cancelar -->
+    <mat-dialog-actions align="end">
+        <button mat-button mat-dialog-close>Cancelar</button>
+        <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
+            Adicionar
+        </button>
+    </mat-dialog-actions>
+
 </div>
