--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -56,7 +56,7 @@
         <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
 
             <!-- Name Produto -->
-            <ng-container matColumnDef="nomeProduto">
+            <ng-container matColumnDef="nome">
                 <th class="color-title" mat-header-cell *matHeaderCellDef>
                     Nome do Produto
                 </th>
