--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -60,8 +60,8 @@
                 <th class="color-title" mat-header-cell *matHeaderCellDef>
                     Nome do Produto
                 </th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.nome }}
+                <td mat-cell *matCellDef="let produto">
+                    {{ produto.nome }}
                 </td>
             </ng-container>
 
@@ -70,7 +70,7 @@
                 <th class="color-title" mat-header-cell *matHeaderCellDef>
                     Descrição do Produto
                 </th>
-                <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
+                <td mat-cell *matCellDef="let produto">{{ produto.descricao }}</td>
             </ng-container>
 
             <!-- Quantidade do produto -->
@@ -78,7 +78,7 @@
                 <th class="color-title" mat-header-cell *matHeaderCellDef>
                     Quantidade
                 </th>
-                <td mat-cell *matCellDef="let element">{{ element.qtdEstoque }}</td>
+                <td mat-cell *matCellDef="let produto">{{ produto.qtdEstoque }}</td>
             </ng-container>
 
             <!-- Preço do produto -->
