ajuste de load de produtos e serviços e ocultando rodapé

--- a/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/views/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -52,7 +52,7 @@
     <!-- LOADING -->
     <mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
     <!-- Tabela de produtos -->
-    <div class="mat-elevation-z8" style="margin-top: 3rem;">
+    <div class="mat-elevation-z8">
         <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
 
             <!-- Name Produto -->
