--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -51,7 +51,7 @@
     <!-- LOADING -->
     <mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
     <!-- Tabela de serviços -->
-    <div class="mat-elevation-z8" style="margin-top: 3rem;">
+    <div class="mat-elevation-z8">
         <table aria-label="tableServicos" mat-table [dataSource]="dataSource">
             <!-- Aplicação do Serviço -->
             <ng-container matColumnDef="aplicacao">
