tradução do dropdonw de usuario

--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -84,7 +84,7 @@
                 </span>
             </ng-container>
         </button>
-        <a (click)="close()" color="primary" mat-button>LOGOUT</a>
+        <a (click)="close()" color="primary" mat-button>SAIR</a>
     </div>
 </div>
 
