--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -68,7 +68,8 @@
             <h3>Total Cancelado: <span>R$180,00</span></h3>
         </div>
         <div class="btn">
-            <button mat-button class="btn-fechar_caixa" mat-raised-button color="primary">Fechar caixa</button>
+            <button mat-button class="btn-fechar_caixa" mat-raised-button color="primary"
+            (click)="fecharCaixa()">Fechar caixa</button>
         </div>
     </div>
 </div>
