estilização do tema dark

--- a/src/@vex/components/page-layout/page-layout.component.scss
+++ b/src/@vex/components/page-layout/page-layout.component.scss
@@ -13,7 +13,7 @@
     padding-bottom: var(--padding);
 
     .vex-page-layout-header {
-        background-color: rgba($color: #1a202e, $alpha: 0.95);
+        background-color: rgba($color: #181c25, $alpha: 1);
         margin-bottom: calc(var(--page-layout-toolbar-height) * -1);
         padding-top: 3%;
         padding-bottom: 1%;
