criando botao para mudar o tema

--- a/src/@vex/styles/_utilities.scss
+++ b/src/@vex/styles/_utilities.scss
@@ -53,23 +53,23 @@
         linear-gradient(
             135deg,
             var(--background-base) 22px,
-            var(--background-hover) 22px,
-            var(--background-hover) 24px,
+            var(--background-pattern) 22px,
+            var(--background-pattern) 24px,
             transparent 24px,
             transparent 67px,
-            var(--background-hover) 67px,
-            var(--background-hover) 69px,
+            var(--background-pattern) 67px,
+            var(--background-pattern) 69px,
             transparent 69px
         ),
         linear-gradient(
                 225deg,
                 var(--background-base) 22px,
-                var(--background-hover) 22px,
-                var(--background-hover) 24px,
+                var(--background-pattern) 22px,
+                var(--background-pattern) 24px,
                 transparent 24px,
                 transparent 67px,
-                var(--background-hover) 67px,
-                var(--background-hover) 69px,
+                var(--background-pattern) 67px,
+                var(--background-pattern) 69px,
                 transparent 69px
             )
             0 64px;
