--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -124,4 +124,10 @@
         <mat-icon [icIcon]="icNotificationsOff"></mat-icon>
         <span>Disable Notifications</span>
     </button>
+
+    <button mat-menu-item>
+      <mat-slide-toggle [color]="color">Tema Escuro</mat-slide-toggle>
+  </button>
 </mat-menu>
+
+
