--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,8 @@
     --background-base: #232b3e ;
     --background-card: #232b3e;
     --background-app-bar: #ff5a00;
-    --background-hover: #ffff;
+    --background-hover: #ff5a00;
+    --background-hover2: #fa8b11;
 
 // Sidenav
 
@@ -87,10 +88,6 @@
 }
 
 .bg-primary-light{
-  color: #ff5a00 !important ;
-}
-
-.bg-primary-dark{
   color: #ff5a00 !important ;
 }
 
