ajustando a cor do bonequinho do usuario

--- a/src/@vex/styles/partials/styles/_style-dark.scss
+++ b/src/@vex/styles/partials/styles/_style-dark.scss
@@ -89,5 +89,12 @@
 
     // --color-warn: yellow;
     // --color-warn-contrast: black;
-}
 
+    .bg-primary{
+      background-color: #ff5a00 !important ;
+    }
+
+    .bg-primary-light{
+      color: #ff5a00 !important ;
+    }
+}
