--- a/src/@vex/styles/partials/styles/_style-default.scss
+++ b/src/@vex/styles/partials/styles/_style-default.scss
@@ -192,3 +192,13 @@
     --border-radius: 4px;
 }
 // @formatter:on
+
+$primary: #5C77FF;
+
+.bg-primary{
+  background-color: #5C77FF !important;
+}
+
+.bg-primary-light{
+  color: #5C77FF !important;
+}
