--- a/src/@vex/styles/partials/styles/_style-dark.scss
+++ b/src/@vex/styles/partials/styles/_style-dark.scss
@@ -66,12 +66,13 @@
 
 --sidenav-toolbar-background: #0c0e13;
 --sidenav-item-background-active: #fa8b11;
+--sidenav-item-background-active2: #ff5a00;
 --sidenav-item-color: #8b9bc2;
---sidenav-item-color-active: #11131b;
---sidenav-item-icon-color: #ffff;
---sidenav-item-icon-color-active: #11131b;
+--sidenav-item-color-active: #0c0e13;
+--sidenav-item-icon-color: #8b9bc2;
+--sidenav-item-icon-color-active: #0c0e13;
 --sidenav-item-border-color: #fa8b11;
---sidenav-item-border-color-active: #fa8b11;
+--sidenav-item-border-color-active: #ffff;
 --sidenav-item-dropdown-background: #{darken($sidenav-background, 3)};
 --sidenav-item-dropdown-background-hover: #{darken($sidenav-background, 4)};
 
