ajustando a logo no login

--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -3,7 +3,7 @@
         <vex-scrollbar [@stagger]="10" class=" flex-auto">
             <div class="p-2 pb-0" fxLayout="column" fxLayoutAlign="center center">
                 <div class="fill-current text-center">
-                    <img alt="" class="w-12" src="assets/img/demo/logo.svg" />
+                    <img alt="" class="w-12 img" src="assets/img/demo/logo.svg" />
                 </div>
             </div>
 
